增加药品物资商品列表显示后端代码

--- a/zft-adapter/src/main/resources/templates/common/common.html
+++ b/zft-adapter/src/main/resources/templates/common/common.html
@@ -22,6 +22,8 @@
         feather.replace()
     </script>
     <script type="text/javascript" th:src="@{/bootstrap/js/Chart.min.js}"></script>
+    <script src="https://unpkg.com/coco-message/coco-message.min.js"></script>
+    <script src="https://unpkg.com/cocomessage/dist/cocoMessage.min.css"></script>
 </nav>
 
 <!-- 头部导航栏 -->
