药品物资代码

--- a/zft-adapter/src/main/resources/templates/common/common.html
+++ b/zft-adapter/src/main/resources/templates/common/common.html
@@ -18,12 +18,11 @@
     <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
     <script type="text/javascript" th:src="@{/bootstrap/js/feather.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/axios.js}"></script>
+    <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
     <script>
         feather.replace()
     </script>
     <script type="text/javascript" th:src="@{/bootstrap/js/Chart.min.js}"></script>
-    <script src="https://unpkg.com/coco-message/coco-message.min.js"></script>
-    <script src="https://unpkg.com/cocomessage/dist/cocoMessage.min.css"></script>
 </nav>
 
 <!-- 头部导航栏 -->
