--- a/zft-adapter/src/main/resources/templates/inventory/inventory.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventory.html
@@ -75,6 +75,7 @@
                 </tr>
                 </tbody>
             </table>
+            <p th:if="${infoDTOList.size() == 0}" class="no-data">暂无数据</p>
         </div>
         <div class="bottom">
             <div class="float-left">
