--- a/zft-adapter/src/main/resources/templates/inventory/inventoryIn.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventoryIn.html
@@ -13,54 +13,49 @@
         </div>
         <div class="right">
             <div class="top">
-                <div class="form-group" style="float: left;width: 150px;margin-right: 15px;">
-                    <select class="form-control" name="inventory_in_status">
-                        <option value="">全部状态</option>
-                        <option value="待入库">待入库</option>
-                        <option value="已入库">已入库</option>
-                    </select>
-                </div>
-                <div class="form-group" style="float: left;width: 120px;margin-right: 15px;">
-                    <select class="form-control" name="inventory_in_date_status">
-                        <option value="0" selected>创建日期</option>
-                        <option value="1">入库日期</option>
-                    </select>
-                </div>
-                <div style="float: left;margin-right: 15px;">
-                    <div class="layui-inline">
-                        <div class="layui-inline" id="test6">
-                            <div class="layui-input-inline float-left" style="width: 100px;">
-                                <input type="text" autocomplete="off" id="test-startDate-1" class="layui-input" style="border: 1px rgb(206,212,218) solid" readonly placeholder="开始日期">
-                            </div>
-                            <div class="layui-form-mid float-left" style="margin: 0 auto;">-</div>
-                            <div class="layui-input-inline float-left" style="width: 100px;">
-                                <input type="text" autocomplete="off" id="test-endDate-1" class="layui-input" style="border: 1px rgb(206,212,218) solid" readonly placeholder="结束日期">
+                <form id="form1" th:action="@{/inventory/toInventoryInByQuery}" method="post">
+                    <div class="form-group" style="float: left;width: 150px;margin-right: 15px;">
+                        <select class="form-control" name="inventory_in_status">
+                            <option value="">全部状态</option>
+                            <option value="待入库">待入库</option>
+                            <option value="已入库">已入库</option>
+                        </select>
+                    </div>
+                    <div class="form-group" style="float: left;width: 120px;margin-right: 15px;">
+                        <select class="form-control" name="inventory_in_date_category">
+                            <option value="1" selected>创建日期</option>
+                            <option value="2">入库日期</option>
+                        </select>
+                    </div>
+                    <div style="float: left;margin-right: 15px;">
+                        <div class="layui-inline">
+                            <div class="layui-inline" id="test6">
+                                <div class="layui-input-inline float-left" style="width: 100px;">
+                                    <input type="text" autocomplete="off" id="test-startDate-1" class="layui-input" name="inventory_in_begin_time" style="border: 1px rgb(206,212,218) solid" readonly placeholder="开始日期">
+                                </div>
+                                <div class="layui-form-mid float-left" style="margin: 0 auto;">-</div>
+                                <div class="layui-input-inline float-left" style="width: 100px;">
+                                    <input type="text" autocomplete="off" id="test-endDate-1" class="layui-input" name="inventory_in_end_time" style="border: 1px rgb(206,212,218) solid" readonly placeholder="结束日期">
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="form-group" style="float: left;width: 140px;margin-right: 15px;">
-                    <select class="form-control" name="inventory_in_supplier">
-                        <option value="">全部供应商</option>
-                        <option value="">甲乙丙</option>
-                        <option value="">甲乙丙</option>
-                        <option value="">甲乙丙</option>
-                    </select>
-                </div>
-                <div class="form-group" style="float: left;width: 140px;margin-right: 15px;">
-                    <select class="form-control" name="inventory_in_supplier">
-                        <option value="">全部入库人</option>
-                        <option value="">姜昊波</option>
-                        <option value="">滴滴滴</option>
-                        <option value="">额恩恩</option>
-                    </select>
-                </div>
-                <div class="form-group" style="float: left;width: 300px;margin-right: 15px;">
-                    <input type="text" class="form-control" name="inventory_in_text" placeholder="药品名/批准文号/国家码">
-                </div>
-                <div style="float: left;">
-                    <button type="button" class="btn btn-outline-primary">查询</button>
-                </div>
+                    <div class="form-group" style="float: left;width: 160px;margin-right: 15px;">
+                        <select class="form-control" id="supplier" name="inventory_in_supplier_id">
+                            <option value="" disabled selected style="display: none;">请选择供应商</option>
+                            <option value="">全部供应商</option>
+                        </select>
+                    </div>
+                    <div class="form-group" style="float: left;width: 140px;margin-right: 15px;">
+                        <select class="form-control" id="operator" name="inventory_in_operator_id">
+                            <option value="" disabled selected style="display: none;">请选择入库人</option>
+                            <option value="">全部入库人</option>
+                        </select>
+                    </div>
+                    <div style="float: left;">
+                        <button type="submit" class="btn btn-outline-primary">查询</button>
+                    </div>
+                </form>
                 <div style="float: right;margin-left: 15px;">
                     <button type="button" class="btn btn-outline-primary">导出</button>
                 </div>
@@ -68,7 +63,7 @@
                     <button type="button" class="btn btn-primary" id="add">新增入库</button>
                 </div>
             </div>
-            <div class="info">
+            <div class="info" id="inInfoList" th:fragment="inInfoList">
                 <table class="table table-striped" style="font-size: 15px;">
                     <thead>
                     <tr>
@@ -134,27 +129,25 @@
                 <div class="info1">
                     <p><span style="color: red">*</span> 入库人</p>
                     <div class="form-group" style="float: left;width: 140px;margin-right: 30px;">
-                        <select class="form-control" name="">
-                            <option value="">姜昊波</option>
-                            <option value="">甲乙丙</option>
-                            <option value="">梁医生</option>
+                        <select class="form-control" id="operator2" name="inventory_in_operator_id">
+                            <option value="" disabled selected style="display: none;">请选择入库人</option>
+                            <option value="">全部入库人</option>
                         </select>
                     </div>
                     <p><span style="color: red">*</span> 供应商</p>
                     <div class="form-group" style="float: left;width: 200px;margin-right: 30px;">
-                        <select class="form-control" name="">
-                            <option value="">凉山州医药集团</option>
-                            <option value="">宜宾隆盛集团</option>
-                            <option value="">沧州供应链集团</option>
+                        <select class="form-control" id="supplier2" name="inventory_in_supplier_id">
+                            <option value="" disabled selected style="display: none;">请选择供应商</option>
+                            <option value="">全部供应商</option>
                         </select>
                     </div>
                     <p><span style="color: red">*</span> 随货单号</p>
                     <div class="form-group" style="float: left;width: 200px;margin-right: 30px;">
-                        <input type="text" class="form-control" name="">
+                        <input type="text" class="form-control" name="inventory_in_delivery">
                     </div>
                     <p>备注</p>
                     <div class="form-group" style="float: left;width: 200px;margin-right: 30px;">
-                        <input type="text" class="form-control" name="">
+                        <input type="text" class="form-control" name="inventory_remarks">
                     </div>
                 </div>
                 <hr>
@@ -179,7 +172,7 @@
                             <thead>
                             <tr>
                                 <td scope="col" width="15%">药品名</td>
-                                <td scope="col" width="10%">国家码</td>
+                                <td scope="col" width="10%">生产厂家</td>
                                 <td scope="col" width="10%">售价(元)</td>
                                 <td scope="col" width="10%">生产批号</td>
                                 <td scope="col" width="10%">生产日期</td>
@@ -193,25 +186,7 @@
                             <tbody>
                             <tr>
                                 <td>感冒灵颗粒</td>
-                                <td>H524234332</td>
-                                <td>30.00</td>
-                                <td>20230302001</td>
-                                <td>2023年1月5日</td>
-                                <td>2025年1月5日</td>
-                                <td>300盒</td>
-                                <td>25.00</td>
-                                <td>7500.00</td>
-                                <td>
-                                    <div class="td-hover">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg svg-text" viewBox="0 0 16 16">
-                                            <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
-                                        </svg>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>感冒灵颗粒</td>
-                                <td>H524234332</td>
+                                <td></td>
                                 <td>30.00</td>
                                 <td>20230302001</td>
                                 <td>2023年1月5日</td>
@@ -362,6 +337,84 @@
             shadow.style.display = "none";
             detailed.style.display = "none";
         };
+
+        /**
+         * 刷新入库单一览页面信息
+         */
+        const form1 = document.getElementById("form1");
+        form1.addEventListener('submit',function (event) {
+            // 阻止表单默认提交行为
+            event.preventDefault();
+            // 创建FormData对象
+            const formData1 = new FormData(form1);
+            $.ajax({
+                url: '/inventory/toInventoryInByQuery',
+                type: 'POST',
+                data: formData1,
+                contentType: false,
+                processData: false,
+                success: function (data) {
+                    $("#inInfoList").html(data);
+                },
+                error:function (data) {
+                    layer.msg('请求失败，请刷新重试');
+                }
+            })
+        });
+
+        /**
+         * 页面初始加载
+         * @type {HTMLElement}
+         */
+        $(document).ready(function() {
+            // 获取供应商列表
+            $.ajax({
+                url: '/inventory/supplierList',
+                type: 'GET',
+                contentType: false,
+                processData: false,
+                success: function (response) {
+                    response.forEach((item)=>{
+                        //先创建好select里面的option元素
+                        const option = document.createElement("option");
+                        //转换DOM对象为JQ对象,好用JQ里面提供的方法 给option的value赋值
+                        $(option).val(item.supplier_id);
+                        //给option的text赋值,这就是你点开下拉框能够看到的东西
+                        $(option).text(item.supplier_name);
+                        //获取select 下拉框对象,并将option添加进select
+                        $('#supplier').append(option);
+                        $('#supplier2').append(option);
+                    });
+                },
+                error:function (response) {
+                    layer.msg('请求失败，请刷新重试');
+                }
+            })
+
+            // 获取入库人列表
+            $.ajax({
+                url: '/account/getAccountList',
+                type: 'GET',
+                contentType: false,
+                processData: false,
+                success: function (response) {
+                    response.forEach((item)=>{
+                        //先创建好select里面的option元素
+                        const option = document.createElement("option");
+                        //转换DOM对象为JQ对象,好用JQ里面提供的方法 给option的value赋值
+                        $(option).val(item.account_id);
+                        //给option的text赋值,这就是你点开下拉框能够看到的东西
+                        $(option).text(item.account_name);
+                        //获取select 下拉框对象,并将option添加进select
+                        $('#operator').append(option);
+                        $('#operator2').append(option);
+                    });
+                },
+                error:function (response) {
+                    layer.msg('请求失败，请刷新重试');
+                }
+            })
+        });
     </script>
 </body>
 </html>
